ghc-4335c07/testsuite/tests/gadt/gadtSyntaxFail003.hs

{-# LANGUAGE GADTSyntax #-}

module GadtSyntaxFail003 where

data Foo a b where
    C1 :: a -> Int -> c -> Foo b a
    C2 :: a -> Char -> Foo a b
    Cs :: Foo a b
